# fltlib

./: CMakeLists.txt  COPYRIGHT  INSTALL  LICENSE  Makefile.am  Makefile.sample  README  bootstrap.sh  buffer.c  configure.ac  fileio.c  flt.c  flt.h  fltMath.h  fltlib.pc.in  fltlib.spec.in  fltw.c  fltw.h  math.c  recnames.h  records.c  stack.c  util.c  writer.c  zmalloc.c  zmalloc.h
